typescript/checker/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            77,
        ),
        hi: BytePos(
            86,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02.ts:3:15
  |
3 | var a = () => arguments;
  |               ^^^^^^^^^

